# minecraft

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  minecraft
cmake_deprecated/: CMakeLists.txt  cmake_install.cmake
cmake_deprecated/src/Screens/LoadScreen/: LoadScreen.h
src/: header.h  main.cpp
src/BaseResource/: BaseResource.cpp  BaseResource.h
src/Engine/: Engine.cpp  Engine.h
src/Screens/TittleScreen/: MainScreen.cpp  MainScreen.h
src/Utils/: ResourceRandomizer.cpp  ResourceRandomizer.h
src/Utils/ResourceRandomizer/: ResourceRandomizer.cpp  ResourceRandomizer.h
src/screens/: main_screen.cpp  main_screen.h
vs_current/: minecraft.sln
vs_current/minecraft/: header.h  main.cpp  minecraft.vcxproj  minecraft.vcxproj.filters
vs_current/minecraft/Engine/: Engine.cpp  Engine.h
vs_current/minecraft/Screens/GameScreen/: GameScreen.cpp  GameScreen.h
vs_current/minecraft/Screens/LoadScreen/: LoadScreen.cpp  LoadScreen.h
vs_current/minecraft/Screens/TittleScreen/: MainScreen.cpp  MainScreen.h
vs_current/minecraft/Utils/: ResourceRandomizer.cpp  ResourceRandomizer.h
vs_current/minecraft/x64/Debug/: minecraft.exe.recipe  minecraft.ilk  vc143.idb
vs_current/minecraft/x64/Debug/minecraft.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  minecraft.lastbuildstate
vs_current/minecraft/x64/Release/: minecraft.exe.recipe  minecraft.iobj  minecraft.ipdb
vs_current/src/Engine/: Engine.cpp  Engine.h
vs_current/src/Utils/: ResourceRandomizer.cpp
(+8 files in other folders)
